--- a/styles/globals.css
+++ b/styles/globals.css
@@ -74,7 +74,7 @@ body {
   overflow-x: hidden;
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  /* justify-content: flex-start; */
   /* gap: 50px; */
   align-items: flex-start;
   color: var(--color-text, #303972);
@@ -84,6 +84,44 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+p {
+  color: var(--color-text, #303972);
+  text-align: justify;
+
+  /* Text/Text Regular 1 */
+  font-family: Poppins;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+
+  padding-bottom: 20px;
+}
+
+h3 {
+  color: var(--color-text, #303972);
+
+  /* Heading/Heading 3 */
+  font-family: Poppins;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+
+  padding-bottom: 16px;
+}
+
+div {
+  color: var(--color-gray-3, #A098AE);
+
+  /* Text/Text Regular 2 */
+  font-family: Poppins;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 
 @media (prefers-color-scheme: dark) {
