--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -1,7 +1,7 @@
 .main {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  /* display: flex; */
+  /* flex-direction: row; */
+  /* justify-content: space-between; */
   flex-grow: 1;
   align-items: center;
   padding: 0;
