--- a/styles/globals.css
+++ b/styles/globals.css
@@ -87,7 +87,7 @@ a {
 }
 
 p {
-  color: var(--color-text, #303972);
+  color: inherit;
   text-align: justify;
 
   /* Text/Text Regular 1 */
@@ -101,7 +101,7 @@ p {
 }
 
 h1 {
-  color: var(--color-text, #303972);
+  color: inherit;
 
   /* Heading/Heading 1 */
   font-family: Poppins;
@@ -111,9 +111,20 @@ h1 {
   line-height: normal;
 }
 
+h2 {
+  color: inherit;
+
+  /* Heading/Heading 2 */
+  font-family: Poppins;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
 
 h3 {
-  color: var(--color-text, #303972);
+  color: inherit;
 
   /* Heading/Heading 3 */
   font-family: Poppins;
@@ -126,7 +137,7 @@ h3 {
 }
 
 div {
-  color: var(--color-gray-3, #A098AE);
+  color: inherit;
 
   /* Text/Text Regular 2 */
   font-family: Poppins;
@@ -134,6 +145,16 @@ div {
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+}
+
+
+.side-status {
+  background: var(--color-white, #FFF);
+  padding: 50px 25px;
+  align-self: flex-start;
+  display: flex;
+  flex-flow: column;
+  justify-content: flex-start;
 }
 
 @media (prefers-color-scheme: dark) {
