--- a/components/Nav/Nav.css
+++ b/components/Nav/Nav.css
@@ -6,7 +6,7 @@
     padding-bottom: 30px;
 
     align-self: stretch;
-    
+
 }
 
 #academic-side-nav .footer {
@@ -33,6 +33,8 @@
     align-items: center;
     gap: 24px;
     color: var(--color-gray-2, #C1BBEB);
+
+    pointer-events: none;
 }
 
 
@@ -55,7 +57,7 @@
 
 .menu-item .menu-title:hover {
     color: var(--color-purple, #4D44B5);
-    fill: var(--color-gray-2, #C1BBEB);
+    fill: var(--color-gray-2, #4D44B5);
 
     font-family: Poppins;
     font-size: 18px;
@@ -73,6 +75,8 @@
     font-style: normal;
     font-weight: 500;
     line-height: normal;
+
+    pointer-events: auto;
 }
 
 .menu-item .menu-icon {
